# rust-game-of-life

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: Dockerfile.windows  icon.icns  resources.rc
src/: README.md  board.rs  build.rs  direction.rs  main.rs  pattern.rs  patterns.rs  shader.rs  vertex.rs
src/assets/: resources.rc
