[package]
name = "game-of-life"
version = "1.0"
edition = "2021"
authors = ["Wesley Dudok van Heel <wesley@bitechular.com>"]
description = "Game of Life simulator"

[dependencies]
winit = "0.28"
env_logger = "0.10"
glium = { git = "https://github.com/glium/glium", rev="9bf6a0001197416145c71287729e77ed4418f87b"}
rand = "0.8"
strum = { version = "0.25", features = ["derive"] }
image = "0.24.6"

[build-dependencies]
embed-resource = "2.2"

[package.metadata.bundle]
name = "Game of Life"
identifier = "com.bitechular.gameoflife"
icon = ["src/assets/icon.icns"]

